# aton

./: CMakeLists.txt
data/: icit0090_seal_bull_chanhujo-daro_good.txt  icit0091_seal_bull_chanhujo-daro_good.txt  icit0096_seal_bull_chanhujo-daro_fine.txt  icit0097_seal_bull_chanhujo-daro_good.txt  icit0104_seal_bull_chanhujo-daro_fine.txt  icit01070_seal_bull_harappa_good.txt  icit0107_seal_bull_chanhujo-daro_fair.txt  icit01080_seal_bull_harappa_fine.txt  icit0108_seal_bull_chanhujo-daro_fair.txt  icit0113_seal_none_chanhujo-daro_good.txt  icit0114_seal_bull_chanhujo-daro_poor.txt  icit0233_seal_bull_harappa_fair.txt  icit0240_seal_bull_harappa_poor.txt  icit0246_seal_bull_harappa_poor.txt  icit0284_seal_bull_harappa_good.txt  icit0292_seal_bull_harappa_fair.txt  icit0293_seal_bull_harappa_poor.txt  icit0319_seal_none_harappa_good.txt  icit0322_seal_bull_harappa_poor.txt  icit0500_pot_none_harappa_poor.txt  icit0520_tab_goat_harappa_fair.txt  icit0900_tab_none_harappa_poor.txt  icit0910_tab_fish_harappa_poor.txt  icit1050_tab_bult_harappa_poor.txt  icit1062_seal_bull_harappa_fine.txt  icit1063_seal_bull_harappa_good.txt  icit1065_seal_bull_harappa_fine.txt  icit1066_seal_bull_harappa_fine.txt  icit1067_seal_bull_harappa_good.txt  icit1068_seal_bull_harappa_good.txt  icit1069_seal_bull_harappa_fair.txt  icit1070_seal_bull_harappa_good.txt  icit1074_seal_bull_harappa_good.txt  icit1075_seal_bull_harappa_fine.txt  icit1080_seal_bull_harappa_fine.txt  icit1081_seal_bull_harappa_poor.txt  icit1082_seal_bull_harappa_fine.txt  icit1083_seal_bull_harappa_poor.txt  icit1084_seal_bull_harappa_fair.txt  icit1085_seal_bull_harappa_good.txt  (+27 more)
data/plots/: aton.dot
src/: aton.cc  cfg.cc  cfg.h  gfx.cc  gfx.h  multistate.h  server.cc  server.h  signature.cc  signature.h  state.cc  state.h  statemgr.cc  statemgr.h  storage.cc  storage.h  textstate.h  transition.h  transitionmgr.cc  transitionmgr.h
tools/: CMakeLists.txt  icitToCc.cc
tst/: CMakeLists.txt  common.cc  common.h  status.cc  tictac.cc  uc1.cc  uc2.cc  uc3.cc  uc4.cc
